# Classwork-PythonMLApplicationDevelopment

./: README.md  pyproject.toml
lesson01/: 1.ipynb  1.py  ipynb2py.py  plot_bubble.py  test.ipynb  test.py
lesson02/: 1.py  iris_classification.ipynb  linear_regression_boston.ipynb  lr_model.joblib  lr_scaler.joblib  model.joblib  scaler.joblib  speak_pdf.py
lesson03/: 01_Equations.ipynb  02_Systems_of_Equations.ipynb  03_Exponentials_Radicals_Logs.ipynb  04_Functions.ipynb  clustering.ipynb  web_solve.py
lesson04/: 01_Differentiation.ipynb  05_Vectors.ipynb  06_Matrices.ipynb  07_Regression.ipynb
lesson05/: 02_Optimization.ipynb  02_Optimization_case_study.ipynb  03_Partial_Derivatives.ipynb  05_Integration.ipynb  q01.ipynb
lesson06/: 01_Statistics_Fundamentals.ipynb  02_EDA.ipynb
lesson07/: 01_Probability.ipynb
lesson08/: 02_Sampling_Distributions.ipynb  03_Hypothesis_Testing.ipynb
lesson09/: 04_簡單線性迴歸_梯度下降.ipynb  05_手寫阿拉伯數字辨識_完整版.ipynb  fp_tkinter.py  model.h5  tensorflow_demo.py  tf_test.ipynb
lesson10/: 04_02_FashionMNIST.ipynb  06_prediction_web.py  EMNIST_TBD.ipynb  iris_classification.ipynb
lesson11/: streamlit_demo.py
lesson12/: 01_Adult.ipynb  05_data_clean.ipynb  06_Seaborn_EDA.ipynb  08_AutoEDA_test.ipynb  model.joblib  profile_report.html  scaler.joblib
lesson13/: 01_Titanic_training.ipynb  02_Titanic_Predict.ipynb  03_Titanic_Predict_streamlit.py  K線圖_mplfinance.ipynb  fare.pickle  model.pickle  ouput.html  每日收盤行情.ipynb
lesson14/: 01_MinMaxScaler.ipynb  02_MinMaxScaler_iris.ipynb  03_MinMaxScaler_vs_StandardScaler.ipynb  09_feature_selection_from_scratch.ipynb
lesson15/: 01_Linear_Regression.ipynb  01_eigenvector_eigenvalue.ipynb  02_feature_extraction_from_scratch.ipynb  03_PCA_transform.ipynb  04_PCA_sklearn.ipynb  05_LDA_transform.ipynb  06_LDA_sklearn.ipynb  07_KernelPCA_circle_data.ipynb
lesson16/: 05_logistic_regression_validation.ipynb  05_nonlinear_regression.ipynb  06_multi_variables_nonlinear_regression.ipynb  07_regression_outlier_effect.ipynb  08_regression_vs_time_series.ipynb  09_regularization.ipynb  10_regularization_housing.ipynb
lesson17/: 02_Scikit-learn_svm.ipynb  03_svm _sample_weight.ipynb  08_scikit-learn_decision_tree.ipynb  10_Scikit-learn_naive_bayes.ipynb  11_naive_bayes_spam.ipynb  wine_tree.dot
lesson18/: 01_MakePipeline_test.ipynb  01_confusion_matrix.ipynb  02_confusion_matrix_multiple-categories.ipynb  02_tensorflow_mnist.ipynb  12_scikit-learn_random_forest.ipynb  13_chaid_three_cat.ipynb
lesson19/: 03_performance_metrics.ipynb  04_ draw_roc.ipynb  06_classification_report.ipynb
lesson20/: 01_simple_kmeans_from_scratch.ipynb  02_kmeans_from_scratch.ipynb  03_Scikit-learn_kmeans.ipynb  04_kmeans_optimization_elbow.ipynb  05_kmeans_optimization_silhouette.ipynb  05_scikit-learn_adaBoost.ipynb  06_xgboost.ipynb  (+2 more)
(+22 files in other folders)
