[tool.poetry]
name = "classwork-pythonmlapplicationdevelopment"
version = "0.1.0"
description = ""
authors = ["chesterXalan <mastenfor26@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
matplotlib = "^3.9.1"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
pypdf2 = "^3.0.1"
pyttsx3 = "^2.90"
seaborn = "^0"
joblib = "^1.4.2"
streamlit = "^1.36.0"
sympy = "^1.13.0"
pulp = "^2.9.0"


[tool.poetry.group.jupyter.dependencies]
notebook = "^7.2.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
